fix z-index

--- a/style.css
+++ b/style.css
@@ -47,8 +47,6 @@ body {
   margin: auto;
   display: -webkit-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
   -webkit-box-pack: center;
   justify-content: center;
@@ -72,11 +70,6 @@ body {
   align-items: center;
   display: -webkit-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  justify-content: center;
   padding: 1em;
   text-align: center;
 }
@@ -281,7 +274,7 @@ p a {
 }
 
 .btn-4 span {
-  z-index: 20;
+  z-index: 0;
 }
 
 .btn-4:after {
@@ -297,7 +290,7 @@ p a {
   -webkit-transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
   transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
   width: 50px;
-  z-index: 10;
+  z-index: 0;
 }
 
 .btn-4:hover:after {
@@ -805,7 +798,7 @@ a.animated-button:link:after, a.animated-button:visited:after {
   left: 50%;
   top: 50%;
   width: 150%;
-  z-index: -1;
+  z-index: 0;
   -webkit-transition: all 0.75s ease 0s;
   -moz-transition: all 0.75s ease 0s;
   -o-transition: all 0.75s ease 0s;
@@ -821,26 +814,6 @@ a.animated-button:link:hover:after, a.animated-button:visited:hover:after {
   height: 450%;
 }
 
-a.animated-button:link, a.animated-button:visited {
-  position: relative;
-  display: block;
-  margin: 30px auto 0;
-  padding: 14px 15px;
-  color: #fff;
-  font-size: 14px;
-  border-radius: 0;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  letter-spacing: .08em;
-  text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
-}
 
 /* Victoria Buttons */
 a.animated-button.victoria-one {
@@ -1102,7 +1075,7 @@ a.animated-button.thar-one:before {
   top: 0px;
   height: 0px;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
   content: '';
   color: #000 !important;
   background: #F7CA18;
@@ -1137,7 +1110,7 @@ a.animated-button.thar-two:before {
   bottom: 0px;
   height: 0px;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
   content: '';
   color: #000 !important;
   background: #F7CA18;
@@ -1173,7 +1146,7 @@ a.animated-button.thar-three:before {
   right: 0px;
   height: 100%;
   width: 0px;
-  z-index: -1;
+  z-index: 0;
   content: '';
   color: #000 !important;
   background: #F7CA18;
@@ -1210,7 +1183,7 @@ a.animated-button.thar-four:before {
   left: 0px;
   height: 100%;
   width: 0px;
-  z-index: -1;
+  z-index: 0;
   content: '';
   color: #000 !important;
   background: #F7CA18;
@@ -1224,7 +1197,7 @@ a.animated-button.thar-four:before {
   /* Hidden by default */
   position: fixed;
   /* Stay in place */
-  z-index: 1;
+  z-index: -2;
   /* Sit on top */
   left: 0;
   top: 0;
@@ -1262,7 +1235,7 @@ a.animated-button.thar-four:before {
   border-radius: 5px;
   padding: 40px;
   opacity: 1;
-  z-index: 100;
+  z-index: -2;
   -moz-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
   -ms-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
   -o-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
